Fixed overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ body {
 }
 
 .perks-title h1{
-    font-size: 4.25vw;
+    font-size: 4vw;
     width: 100%;
     margin: 0;
 }
@@ -775,7 +775,7 @@ body {
     }
 
     .perks-info {
-        width: fit-content;
+        width: 100%;
     }
 
     .perks-title {
@@ -790,6 +790,7 @@ body {
         display: flex;
         align-items: center;
         padding: 0 5vw 2.5vw;
+        margin: 0;
     }
 
     .perks-text-img {
